
Fixed issues with rtpict running under Windows.  Thanks to Mehlika
Inanici for help finding problems and testing.

Added metadata i/o to ra_bmp in both directions, preserving
color space, gamma, and typical Radiance header settings.

Updated evalglare with new 3.0x version from Jan Wienold.

Fixed issue with genBSDF -t3 option under Windows.

Created rxfluxmtx tool that avoids unnecessary interprocess
communication by supporting direct calls to RcontribSimulManager
class and provides view rendering as well as surface sampling
and pass-through modes.

Added -m option to pvsum to optimize memory cache performance.

Added -bj option to rfluxmtx and rxfluxmtx to blur bin boundaries
by jittering sample directions.  Setting -bj 1 is statistically
equivalent to linear interpolation of receiver bins, rather than
the default piecewise constant representation (-bj 0).

Added rtrace -pA option for total radiometric flux output.

Fixed major bug in gensdaymtx that was causing the solar contributions
to be about 40x what they should have been.

Fixed major bug in genssky where it was not using the correct location
information.

Fixed issue with perturbed ray transmission in transparent materials
applied to Phong-smoothed surfaces.  This has been a long-standing
issue, and the fix is a bit of a hack as it relies on the first
surface modifier being named "Phong", which corresponds to the
current output of genrev and gensurf when using the -s option.

TW did some profiling on Windows and found a lot of time being
spent in setting and checking errno, which is a system call there
(unlike Unix).  A workaround was found that reduces this time and
can make a 35% or better speed-up with rcontrib.

TW replaced calls to rand() under Windows with better, faster
random number generator.  Unix not affected as rand48() works
well enough.

Made a list of tools that do and do not support hyperspectral
data and put it in "doc/notes/hyperspectral.txt".